Add testing infrastructure and configuration for VS Code extension
- Created `.vscode-test.js` for integration test configuration.
- Updated `.vscodeignore` to exclude test files and build artifacts.
- Added Playwright configuration in `playwright.config.ts` for E2E testing.
- Implemented integration tests in `test/integration/extension.test.ts` to verify extension activation and command registration.
- Established unit tests for auto-refresh functionality in `test/unit/container.test.ts`.
- Introduced E2E tests for the webview UI in `test/e2e/webview.spec.ts` with mock data.
- Configured GitHub Actions workflow for testing in `.github/workflows/test.yml`.
- Added mock data for E2E tests in `test/e2e/fixtures/mockData.ts`.
- Created a placeholder for the test workspace in `test/fixtures/test-workspace/.gitkeep`.
- Enhanced unit tests for various components, ensuring comprehensive coverage.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,20 +1,37 @@
-.vscode/**
-.vscode-test/**
+# Source files
 src/**
-test/**
 webview-ui/src/**
+webview-ui/*.ts
 webview-ui/node_modules/**
-.devcontainer/**
-.github/**
-.gitignore
-.eslintrc.json
-*.map
-*.ts
-!dist/**
-tsconfig.json
-esbuild.js
+
+# Test files
+test/**
+.vscode-test.js
 vitest.config.ts
 playwright.config.ts
-.vscode-test.js
+
+# Build artifacts not needed in package
+*.map
+coverage/**
+playwright-report/**
+
+# Development files
+.github/**
+.vscode/**
+*.md
+!README.md
+.gitignore
+.cursorignore
+.eslintrc*
+.prettierrc*
+tsconfig.json
+
+# Package management
 node_modules/**
-!node_modules/@linear/sdk/**
+pnpm-lock.yaml
+
+# Editor files
+*.swp
+*.swo
+*~
+.DS_Store
