--- a/package.json
+++ b/package.json
@@ -216,6 +216,8 @@
     "@vscode/vsce": "^2.22.0",
     "esbuild": "^0.19.0",
     "eslint": "^8.50.0",
+    "glob": "^10.3.0",
+    "mocha": "^10.2.0",
     "typescript": "^5.3.0",
     "vitest": "^1.0.0"
   },
